# kProxyCpp

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  libkProxy.cmake  main.cpp
Example/: MergePhoto.html  WebSocket.html  index.html
kProxy/: HttpResponseCode.h  UTF8Url.h  kClient.cpp  kClient.h  kHttpd.cpp  kHttpd.h  kHttpdClient.cpp  kProxy.cpp  kProxy.h
kProxy/CGI/: kCGI.cpp  kCGI.h
kProxy/kHttpd/: kHttpd.cpp  kHttpd.h  kHttpdClient.cpp  kHttpdClient.h  kWebSocketClient.cpp  kWebSocketClient.h
tests/: has_filesystem.cc  has_filesystem.cpp  localhost.crt  localhost.key  openssl_client.cpp  openssl_server.cpp  test_opencv.cpp
tests/openssl_examples-master/: common.h  ssl_server_nonblock.c
